--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.4.6",
     "node-releases": "^2.0.19",
     "nodemailer": "^6.9.16",
+    "oidc-token-hash": "^5.1.0",
     "otplib": "^12.0.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
