--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@panva/hkdf": "^1.2.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
