--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "bcryptjs": "^3.0.2",
+    "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,7 +62,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/lru-cache": "7.10.9",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.14",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.15",
     "@types/react-dom": "^18.3.5",
