--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
+    "glob": "^10.4.5",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
