Fix admin authentication system: Installed bcrypt types for proper TypeScript support. Enhanced auth-options.ts with detailed debug logging to track authentication flow. Fixed error handling with proper type checking. Created robust admin recreation script that properly handles foreign key constraints by deleting staff records before users. Admin login credentials now properly configured with bcrypt password hashing. System ready for login testing with admin@cjcp.edu / admin123.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "zod": "^3.25.65"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/lru-cache": "7.10.9",
     "@types/node": "^24.0.14",
