--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -46,12 +48,14 @@
     "nodemailer": "^6.9.16",
     "oidc-token-hash": "^5.1.1",
     "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "recharts": "^2.15.3",
     "resend": "^4.6.0",
+    "speakeasy": "^2.0.0",
     "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.17",
