--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "nodemailer": "^6.9.16",
     "oidc-token-hash": "^5.1.1",
     "otplib": "^12.0.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "18.3.1",
