--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/serviceworker": "^0.0.149",
     "@types/speakeasy": "^2.0.10",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -67,6 +68,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.65"
   },
   "devDependencies": {
