--- a/package.json
+++ b/package.json
@@ -7,6 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:perf": "playwright test --grep @performance",
+    "test:all": "npm run lint && npm run type-check && npm run test && npm run test:e2e",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -23,6 +35,7 @@
     "@panva/hkdf": "^1.2.1",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -74,9 +87,15 @@
     "zod": "^3.25.65"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@playwright/test": "^1.54.2",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/dompurify": "^3.0.5",
+    "@types/jest": "^30.0.0",
     "@types/lru-cache": "7.10.9",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
@@ -85,9 +104,19 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-environment-node": "^30.0.5",
+    "jest-html-reporter": "^4.3.0",
+    "jest-junit": "^16.0.0",
+    "jest-sonar-reporter": "^2.0.0",
+    "jest-watch-select-projects": "^2.0.0",
+    "jest-watch-typeahead": "^3.0.1",
     "lru-cache": "10.4.3",
+    "msw": "^2.10.4",
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
+    "supertest": "^7.1.4",
     "typescript": "^5.9.2"
   },
   "engines": {
