Fix critical UI/UX issues and prepare for production deployment
- Fixed theme page missing from sidebar menu
- Improved color contrast in Modern Purple theme for better readability
- Fixed meeting creation error by replacing empty string values with 'none' in Select components
- Added BackLink component to all Meeting Intelligence subpages for better navigation
- Set up comprehensive CI/CD pipeline with GitHub Actions
- Added deployment configurations for Vercel and traditional servers
- Created monitoring stack with Docker Compose (Prometheus, Grafana, Loki)
- Added health check API endpoint for production monitoring
- Fixed test infrastructure and mock data for Jest testing
- Created comprehensive deployment documentation

This commit ensures the application is production-ready with proper testing, deployment automation, and monitoring infrastructure.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "test:smoke": "playwright test --grep @smoke",
     "test:perf": "playwright test --grep @performance",
     "test:all": "npm run lint && npm run type-check && npm run test && npm run test:e2e",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "clean": "rm -rf .next node_modules coverage",
+    "clean:cache": "rm -rf .next/cache",
+    "analyze": "ANALYZE=true npm run build",
+    "deploy:vercel": "vercel --prod",
+    "deploy:preview": "vercel",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed",
