--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -9,39 +9,38 @@ on:
 
 env:
   NODE_VERSION: '20.x'
-  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/agendaiq_test
-  NEXTAUTH_URL: http://localhost:3000
-  NEXTAUTH_SECRET: test-secret-for-ci-only
-  JWT_SECRET: test-jwt-secret-for-ci-only
-  SKIP_ENV_VALIDATION: true
+  PNPM_VERSION: 8
 
 jobs:
-  # Code Quality Checks
+  # Quality checks job
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Run linter
-        run: npm run lint
-      
-      - name: Type check
-        run: npm run type-check || npx tsc --noEmit
-      
-      - name: Check formatting
-        run: npx prettier --check "src/**/*.{ts,tsx,js,jsx}"
 
-  # Unit and Integration Tests
+      - name: Run linting
+        run: npm run lint
+
+      - name: Run type checking
+        run: npm run type-check
+
+      - name: Check formatting
+        run: npm run format:check
+
+  # Test job
   test:
     name: Tests
     runs-on: ubuntu-latest
@@ -49,8 +48,8 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
           POSTGRES_DB: agendaiq_test
         options: >-
           --health-cmd pg_isready
@@ -61,121 +60,119 @@ jobs:
           - 5432:5432
 
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Setup database
+
+      - name: Setup test database
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/agendaiq_test
         run: |
-          cp .env.test .env
-          npx prisma generate
-          npx prisma db push
-      
+          npx prisma migrate deploy
+          npx prisma db seed
+
       - name: Run unit tests
-        run: npm run test:unit -- --coverage --ci
-      
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            test-results/
-            coverage/
-      
-      - name: Run integration tests
-        run: npm run test:integration -- --ci
-      
-      - name: Upload coverage to Codecov
+        env:
+          DATABASE_URL: postgresql://test:test@localhost:5432/agendaiq_test
+          NEXTAUTH_SECRET: test-secret-for-ci
+          NEXTAUTH_URL: http://localhost:3000
+        run: npm test -- --coverage --maxWorkers=2
+
+      - name: Upload coverage reports
         uses: codecov/codecov-action@v3
         with:
-          file: ./coverage/lcov.info
+          files: ./coverage/lcov.info
           flags: unittests
           name: codecov-umbrella
 
-  # E2E Tests
-  e2e:
-    name: E2E Tests
+  # Build job
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: agendaiq_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
+    needs: [quality]
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-      
-      - name: Setup database
-        run: |
-          cp .env.test .env
-          npx prisma generate
-          npx prisma db push
-          npx prisma db seed
-      
-      - name: Build application
-        run: npm run build
-      
-      - name: Run E2E tests
-        run: npm run test:e2e
-      
-      - name: Upload E2E test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-results
-          path: |
-            test-results/playwright-report/
-            test-results/playwright-results.json
 
-  # Performance Tests
+      - name: Build application
+        env:
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: npm run build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: |
+            .next/
+            public/
+            package.json
+            package-lock.json
+            next.config.js
+          retention-days: 7
+
+  # Security scanning
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+      - name: Run npm audit
+        run: npm audit --audit-level=moderate || true
+
+  # Performance testing
   performance:
     name: Performance Tests
     runs-on: ubuntu-latest
-    needs: [quality, test]
+    needs: [build]
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build application
-        run: npm run build
-      
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+
       - name: Run Lighthouse CI
         uses: treosh/lighthouse-ci-action@v10
         with:
@@ -184,74 +181,45 @@ jobs:
             http://localhost:3000/dashboard
           uploadArtifacts: true
           temporaryPublicStorage: true
-        continue-on-error: true
 
-  # Security Scan
-  security:
-    name: Security Scan
+  # E2E tests (optional, runs on main branch only)
+  e2e:
+    name: E2E Tests
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    needs: [build, test]
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Run security audit
-        run: npm audit --audit-level=moderate
-        continue-on-error: true
-      
-      - name: Run Snyk security scan
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  # Build and Deploy
-  deploy:
-    name: Build and Deploy
-    runs-on: ubuntu-latest
-    needs: [quality, test, e2e, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
-    steps:
-      - uses: actions/checkout@v3
-      
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build application
-        run: npm run build
-        env:
-          NEXT_PUBLIC_APP_URL: ${{ secrets.PRODUCTION_URL }}
-      
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
 
-  # Notification (Optional - only runs if Slack webhook is configured)
-  notify:
-    name: Notify Results
-    runs-on: ubuntu-latest
-    needs: [quality, test, e2e, security, deploy]
-    if: always() && secrets.SLACK_WEBHOOK != ''
-    steps:
-      - name: Send Slack notification
-        uses: 8398a7/action-slack@v3
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
         with:
-          status: ${{ job.status }}
-          text: |
-            Pipeline: ${{ github.workflow }}
-            Status: ${{ job.status }}
-            Branch: ${{ github.ref }}
-            Commit: ${{ github.sha }}
-            Author: ${{ github.actor }}
+          name: build-artifacts
+
+      - name: Run E2E tests
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-        if: env.SLACK_WEBHOOK_URL != ''
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          NEXTAUTH_URL: http://localhost:3000
+        run: npm run test:e2e
+
+      - name: Upload E2E test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: e2e-results
+          path: test-results/
+          retention-days: 30
