Add security rules and update gitignore to protect sensitive files
- Created comprehensive security rules in SECURITY_RULES.md
- Updated CLAUDE.md with mandatory security guidelines
- Enhanced .gitignore to exclude all sensitive file patterns
- Added Supabase connection test script (without credentials)
- Installed pg package for database testing
- IMPORTANT: All files containing passwords or credentials are now excluded from git

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,18 @@
 .DS_Store
 *.pem
 
+# SECURITY: Never commit sensitive files
+SUPABASE_CREDENTIALS_BACKUP.md
+SUPABASE_VERIFIED_URLS.md
+*_CREDENTIALS.md
+*_PASSWORDS.md
+*_SECRETS.md
+*_PRIVATE.md
+*_SENSITIVE.md
+credentials/
+secrets/
+private/
+
 # debug
 npm-debug.log*
 yarn-debug.log*
