--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "test-utils", "**/*.test.ts", "**/*.test.tsx", "__tests__", "__mocks__", "jest.setup.js", "jest.config.js"]
 }
