--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@panva/hkdf": "^1.2.1",
     "@prisma/client": "^6.13.0",
@@ -102,6 +103,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.15",
     "@types/react-dom": "^18.3.5",
+    "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
@@ -121,6 +123,7 @@
     "prisma": "^6.13.0",
     "pusher-js": "^8.4.0",
     "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2",
     "web-streams-polyfill": "^4.1.0",
     "whatwg-fetch": "^3.6.20"
