--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@sentry/nextjs": "^10.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.6",
