Add comprehensive CI/CD monitoring system with Sentry integration
- Created pipeline monitoring API endpoints for GitHub Actions
- Created deployment tracking for Vercel
- Created build metrics and error monitoring APIs
- Integrated Sentry for error tracking and performance monitoring
- Added ErrorMonitor and CICDMonitor components
- Created comprehensive test suite for all monitoring features
- Fixed type errors and build issues for deployment
- Added real-time monitoring dashboards with auto-refresh
- Implemented tabbed interface for pipeline and error views

All endpoints protected with authentication
Following CLAUDE.md rules - real-time data only, no mock data

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,13 @@
 *.pem
 
 # SECURITY: Never commit sensitive files
-SUPABASE_CREDENTIALS_BACKUP.md
-SUPABASE_VERIFIED_URLS.md
+docs/security/SUPABASE_CREDENTIALS_BACKUP.md
+docs/security/SUPABASE_VERIFIED_URLS.md
+docs/security/*_CREDENTIALS.md
+docs/security/*_PASSWORDS.md
+docs/security/*_SECRETS.md
+docs/security/*_PRIVATE.md
+docs/security/*_SENSITIVE.md
 *_CREDENTIALS.md
 *_PASSWORDS.md
 *_SECRETS.md
@@ -35,6 +40,9 @@ SUPABASE_VERIFIED_URLS.md
 credentials/
 secrets/
 private/
+
+# Optional: Completed tasks documentation
+docs/completed/
 
 # debug
 npm-debug.log*
