--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@axe-core/puppeteer": "^4.10.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@octokit/rest": "^22.0.0",
     "@panva/hkdf": "^1.2.1",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
