--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "web-vitals": "^5.1.0",
     "zod": "^3.25.65"
   },
   "devDependencies": {
