--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@sentry/nextjs": "^10.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.6",
@@ -72,6 +73,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "isomorphic-dompurify": "^2.26.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
