--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "isomorphic-dompurify": "^2.26.0",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
