HOTFIX 6: Final deployment preparation
- Fixed remaining Math.floor syntax errors in server metrics routes
- Added .gitignore entries for v2 development files (separate terminal work)
- Added unsafe type casting prevention script
- Enhanced ESLint configuration to prevent dangerous patterns
- Excluded backup files from version control

Ready for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,10 @@ test_*.js
 # API test routes that may expose passwords
 src/app/api/test-login/
 .claude/validation-status.json
+
+# Team V2 files (separate development)
+src/app/api/teams-v2/
+src/app/dashboard/teams-v2/
+src/components/teams-v2/
+src/lib/prisma-v2.ts
+*.backup-*
