--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
+    "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "husky": "^9.1.7",
