--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "installCommand": "npm install",
   "regions": ["iad1"],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "TAILWIND_MODE": "build"
   },
   
   "functions": {
