Restore original PostCSS configuration and handle Sentry expiration
- Revert to original working PostCSS config with @tailwindcss/postcss
- Remove temporary safelist patterns - not needed with correct config
- Temporarily disable Sentry due to subscription expiration
- This restores the exact configuration that was working last night

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   "installCommand": "npm install",
   "regions": ["iad1"],
   "env": {
-    "NODE_ENV": "production",
-    "TAILWIND_MODE": "build"
+    "NODE_ENV": "production"
   },
   
   "functions": {
