--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@sentry/nextjs": "^10.1.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
