--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
-
     "@tailwindcss/postcss": "^4.1.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/speakeasy": "^2.0.10",
@@ -108,6 +107,8 @@
     "oidc-token-hash": "^5.1.1",
     "otplib": "^12.0.1",
     "pg": "^8.16.3",
+    "posthog-js": "^1.260.1",
+    "posthog-node": "^5.7.0",
     "puppeteer": "^24.16.0",
     "react": "18.3.1",
     "react-day-picker": "^9.8.1",
