--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.515.0",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
