docs: add Review Package and Progress Log; docs: update MERKEZI_SISTEMLER and SYSTEM_VALIDATION_CHECKLIST to RoleKey canonical + capability presence; auth(policy): add isRole helper and type-safe enrichUserWithCapabilities; remove unsafe casts

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,10 @@ private/
 # Optional: Completed tasks documentation
 docs/completed/
 
+# Page configuration files
+page-config.json
+src/components/layout/SidebarItems.generated.ts
+
 # Trash folder - removed components
 trash/
 
