--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,21 @@ SENTRY_ORG="your-org"
 SENTRY_PROJECT="your-project"
 
 # ====================================
+# FEATURE FLAGS (Safe Deployment)
+# ====================================
+# Teams Feature - Set to false in production until ready
+NEXT_PUBLIC_FEATURE_TEAMS=false
+NEXT_PUBLIC_TEAMS_PHASE_1=false
+NEXT_PUBLIC_TEAMS_PHASE_2=false
+NEXT_PUBLIC_TEAMS_PHASE_3=false
+NEXT_PUBLIC_TEAMS_PHASE_4=false
+
+# Teams Configuration
+NEXT_PUBLIC_MAX_TEAMS_PER_USER=10
+NEXT_PUBLIC_MAX_MEMBERS_PER_TEAM=50
+NEXT_PUBLIC_TEAMS_ANALYTICS=false
+
+# ====================================
 # ENVIRONMENT RULES
 # ====================================
 # Development: Uses local PostgreSQL
