--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "test-utils", "**/*.test.ts", "**/*.test.tsx", "__tests__", "__mocks__", "jest.setup.js", "jest.config.js"]
+  "exclude": ["node_modules", "test-utils", "**/*.test.ts", "**/*.test.tsx", "__tests__", "__mocks__", "jest.setup.js", "jest.config.js", "backups"]
 }
