security: Remove sensitive migration files from git tracking
- Remove migration_backups/ directory from git tracking
- Add comprehensive patterns to .gitignore for database files:
  - migration_backups/
  - *_migration*.sql
  - *_backup*.sql
  - *_schema*.sql
  - SUPABASE_*.txt
  - LOCAL_*.sql
- Prevent accidental commit of sensitive database information

Migration files remain safely stored locally only.

--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,17 @@ prod_cookies*.txt
 prod_test_cookies*.txt
 lint-errors*.json
 **/node_modules_backup/
+
+# Database migration files (SENSITIVE DATA)
+migration_backups/
+migrations/
+*_migration*.sql
+*_backup*.sql
+*_schema*.sql
+*_schema*.txt
+MIGRATION_*.md
+SUPABASE_*.txt
+LOCAL_*.sql
 organization_structure*.json
 postcss.config*.js
 prisma/migrations/migration_lock*.toml
