--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "test-utils", "**/*.test.ts", "**/*.test.tsx", "__tests__", "__mocks__", "jest.setup.js", "jest.config.js", "backups", "scripts", "**/*.backup.*", "src/lib/performance/**", "src/lib/monitoring/**", "src/lib/testing/**", "src/lib/sentry/**", "src/lib/posthog/**", "src/lib/security/dynamic-menu.ts", "src/lib/security/dynamic-rbac-simple.ts", "src/lib/utils/rate-limit-advanced.ts", "src/__tests__/**", "src/lib/utils/api-test-helpers.ts", "src/lib/meeting-intelligence/**", "src/lib/middleware/**"]
+  "exclude": ["node_modules", "test-utils", "**/*.test.ts", "**/*.test.tsx", "__tests__", "__mocks__", "jest.setup.js", "jest.config.js", "backups", "scripts", "**/*.backup.*", "trash/**", "**/trash/**", "**/linter-changes-backup-*/**", "src/lib/testing/**", "src/__tests__/**", "src/lib/utils/api-test-helpers.ts"]
 }
